--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="api_key">954eb59461f972e120a38082d72f97a5</string>
+    <string name="celcius">\u2103</string>
+    <string name="png">.png</string>
 </resources>
